--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>webjobpositionator</title>
+  <title>Web Job Positionator™</title>
   <link href="public/assets/stylesheets/style.css" type="text/css" media="all" rel="stylesheet" />
 </head><body>
   <main id="app" role="application"></main>
